// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`box-shadow: 5px 5px 10px rgba(0,0,0,0.3): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: 5px 5px 10px rgba(0,0,0,0.3): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 5, 5, 10, 0, 0x4d000000))",
      "valueCode": "UniNativeBoxShadow(false, 5, 5, 10, 0, 0x4d000000)",
    },
  },
}
`;

exports[`box-shadow: 5px 5px red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: 5px 5px red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 5, 5, 0, 0, 0xffff0000))",
      "valueCode": "UniNativeBoxShadow(false, 5, 5, 0, 0, 0xffff0000)",
    },
  },
}
`;

exports[`box-shadow: inset 0 0 5px #123456: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: inset 0 0 5px #123456: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(true, 0, 0, 5, 0, 0xff123456))",
      "valueCode": "UniNativeBoxShadow(true, 0, 0, 5, 0, 0xff123456)",
    },
  },
}
`;

exports[`box-shadow: invalid: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: invalid: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(UniNativeBoxShadow(false, 0, 0, 0, 0, 0))",
      "valueCode": "UniNativeBoxShadow(false, 0, 0, 0, 0, 0)",
    },
  },
}
`;

exports[`box-shadow: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-shadow: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-shadow": {
      "setterCode": "boxShadow(null)",
      "valueCode": "null",
    },
  },
}
`;

exports[`box-sizing: border-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-sizing": {
      "setterCode": "setStyleBoxSizing(UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "BorderBox"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "BorderBox")",
    },
  },
}
`;

exports[`box-sizing: border-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`box-sizing: content-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "box-sizing": {
      "setterCode": "setStyleBoxSizing(UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "ContentBox"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSBoxSizingType, "::", "ContentBox")",
    },
  },
}
`;

exports[`box-sizing: content-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-bottom-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-bottom": {
      "setterCode": "setStyleMarginBottom(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`margin: margin-bottom-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-bottom-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-bottom",
        "important": false,
        "prop": "marginBottom",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid unit value: auto",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`margin: margin-bottom-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-left-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-left": {
      "setterCode": "setStyleMarginLeft(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`margin: margin-left-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-left-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-left",
        "important": false,
        "prop": "marginLeft",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid unit value: auto",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`margin: margin-left-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-right-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-right": {
      "setterCode": "setStyleMarginRight(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`margin: margin-right-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-right-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-right",
        "important": false,
        "prop": "marginRight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid unit value: auto",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`margin: margin-right-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-top-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "margin-top": {
      "setterCode": "setStyleMarginTop(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`margin: margin-top-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`margin: margin-top-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "margin-top",
        "important": false,
        "prop": "marginTop",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid unit value: auto",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`margin: margin-top-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`opacity: 0.5: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`opacity: 0.5: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "opacity": {
      "setterCode": "opacity(0.5)",
      "valueCode": "0.5",
    },
  },
}
`;

exports[`opacity: 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`opacity: 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "opacity": {
      "setterCode": "opacity(0)",
      "valueCode": "0",
    },
  },
}
`;

exports[`opacity: 1: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`opacity: 1: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "opacity": {
      "setterCode": "opacity(1)",
      "valueCode": "1",
    },
  },
}
`;

exports[`overflow: hidden: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`overflow: hidden: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "overflow": {
      "setterCode": "overflow(UTSCPP.propertyAccess(UniNativeOverflowType, "::", "Hidden"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeOverflowType, "::", "Hidden")",
    },
  },
}
`;

exports[`overflow: visible: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`overflow: visible: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "overflow": {
      "setterCode": "overflow(UTSCPP.propertyAccess(UniNativeOverflowType, "::", "Visible"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativeOverflowType, "::", "Visible")",
    },
  },
}
`;

exports[`padding: padding-bottom-5%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-bottom": {
      "setterCode": "setStylePaddingBottom(5, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`padding: padding-bottom-5%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-bottom-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-bottom": {
      "setterCode": "setStylePaddingBottom(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`padding: padding-bottom-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-left-5%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-left": {
      "setterCode": "setStylePaddingLeft(5, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`padding: padding-left-5%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-left-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-left": {
      "setterCode": "setStylePaddingLeft(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`padding: padding-left-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-right-5%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-right": {
      "setterCode": "setStylePaddingRight(5, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`padding: padding-right-5%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-right-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-right": {
      "setterCode": "setStylePaddingRight(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`padding: padding-right-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-top-5%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-top": {
      "setterCode": "setStylePaddingTop(5, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(5, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`padding: padding-top-5%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`padding: padding-top-10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "padding-top": {
      "setterCode": "setStylePaddingTop(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`padding: padding-top-10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`pointer-events: auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`pointer-events: auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "pointer-events": {
      "setterCode": "pointerEvents(UTSCPP.propertyAccess(UniNativePointerEventType, "::", "Auto"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativePointerEventType, "::", "Auto")",
    },
  },
}
`;

exports[`pointer-events: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`pointer-events: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "pointer-events": {
      "setterCode": "pointerEvents(UTSCPP.propertyAccess(UniNativePointerEventType, "::", "None"))",
      "valueCode": "UTSCPP.propertyAccess(UniNativePointerEventType, "::", "None")",
    },
  },
}
`;

exports[`transform: matrix(1, 0.5, -0.5, 1, 10, 20): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: matrix(1, 0.5, -0.5, 1, 10, 20): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformMatrix, "::", "Matrix")(1, 0.5, -0.5, 1, 10, 20)])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformMatrix, "::", "Matrix")(1, 0.5, -0.5, 1, 10, 20)]",
    },
  },
}
`;

exports[`transform: perspective(1000px): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: perspective(1000px): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformPerspective, "::", "Perspective")(new UniCSSUnitValue(1000, UniCSSUnitType.PX))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformPerspective, "::", "Perspective")(new UniCSSUnitValue(1000, UniCSSUnitType.PX))]",
    },
  },
}
`;

exports[`transform: rotate(30deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotate(30deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(new UniCSSUnitValue(30, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(new UniCSSUnitValue(30, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: rotate3d(1, 1, 1, 45deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotate3d(1, 1, 1, 45deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: rotateX(45deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotateX(45deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateX")(new UniCSSUnitValue(45, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateX")(new UniCSSUnitValue(45, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: rotateY(60deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotateY(60deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateY")(new UniCSSUnitValue(60, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateY")(new UniCSSUnitValue(60, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: rotateZ(90deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: rotateZ(90deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateZ")(new UniCSSUnitValue(90, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateZ")(new UniCSSUnitValue(90, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: scale(1.2): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: scale(1.2): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2)])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2)]",
    },
  },
}
`;

exports[`transform: scale(1.2, 1.5): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: scale(1.2, 1.5): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, 1.5)])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2, 1.5)]",
    },
  },
}
`;

exports[`transform: scale3d(1.2, 1.5, 1.0): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: scale3d(1.2, 1.5, 1.0): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(1.2, 1.5, 1)])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(1.2, 1.5, 1)]",
    },
  },
}
`;

exports[`transform: skew(15deg, 0deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skew(15deg, 0deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(0, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(0, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: skew(15deg, 30deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skew(15deg, 30deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(30, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(30, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: skewX(20deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skewX(20deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewX")(new UniCSSUnitValue(20, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewX")(new UniCSSUnitValue(20, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: skewY(25deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: skewY(25deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewY")(new UniCSSUnitValue(25, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewY")(new UniCSSUnitValue(25, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformMatrix3D, "::", "Matrix3d")(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1)])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformMatrix3D, "::", "Matrix3d")(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 10, 20, 0, 1)]",
    },
  },
}
`;

exports[`transform: transform: skew(15deg, 30deg) skewX(20deg) skewY(25deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: transform: skew(15deg, 30deg) skewX(20deg) skewY(25deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(30, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewX")(new UniCSSUnitValue(20, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewY")(new UniCSSUnitValue(25, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(30, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewX")(new UniCSSUnitValue(20, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "SkewY")(new UniCSSUnitValue(25, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2) skew(15deg, 0deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2) skew(15deg, 0deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(new UniCSSUnitValue(30, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(0, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(new UniCSSUnitValue(30, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2), UTSCPP.propertyAccess(UniCSSTransformSkew, "::", "Skew")(new UniCSSUnitValue(15, UniCSSUnitType.DEG), new UniCSSUnitValue(0, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate(40px, 0px) rotate(30deg) scale(1.2): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(new UniCSSUnitValue(30, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2)])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate")(new UniCSSUnitValue(30, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale")(1.2)]",
    },
  },
}
`;

exports[`transform: translate(40px, 0px): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate(40px, 0px): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX))]",
    },
  },
}
`;

exports[`transform: translate3d(40px, 0px, 10px): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate3d(40px, 0px, 10px): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(0, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX))]",
    },
  },
}
`;

exports[`transform: translate3d(40px, 20px, 10px) scale3d(1.2, 1.5, 1.0) rotate3d(1, 1, 1, 45deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translate3d(40px, 20px, 10px) scale3d(1.2, 1.5, 1.0) rotate3d(1, 1, 1, 45deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(1.2, 1.5, 1), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "Translate3d")(new UniCSSUnitValue(40, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(10, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformScale, "::", "Scale3d")(1.2, 1.5, 1), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "Rotate3d")(new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(1, UniCSSUnitType.DEG), new UniCSSUnitValue(45, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform: translateX(40px) translateY(20px) translateZ(10px) rotateX(45deg) rotateY(60deg) rotateZ(90deg): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform: translateX(40px) translateY(20px) translateZ(10px) rotateX(45deg) rotateY(60deg) rotateZ(90deg): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform": {
      "setterCode": "transform([UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "TranslateX")(new UniCSSUnitValue(40, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "TranslateY")(new UniCSSUnitValue(20, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "TranslateZ")(new UniCSSUnitValue(10, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateX")(new UniCSSUnitValue(45, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateY")(new UniCSSUnitValue(60, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateZ")(new UniCSSUnitValue(90, UniCSSUnitType.DEG))])",
      "valueCode": "[UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "TranslateX")(new UniCSSUnitValue(40, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "TranslateY")(new UniCSSUnitValue(20, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformTranslate, "::", "TranslateZ")(new UniCSSUnitValue(10, UniCSSUnitType.PX)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateX")(new UniCSSUnitValue(45, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateY")(new UniCSSUnitValue(60, UniCSSUnitType.DEG)), UTSCPP.propertyAccess(UniCSSTransformRotate, "::", "RotateZ")(new UniCSSUnitValue(90, UniCSSUnitType.DEG))]",
    },
  },
}
`;

exports[`transform-origin: 10px 20px 5px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 10px 20px 5px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(10, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(5, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(10, UniCSSUnitType.PX), new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(5, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 20px 30px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 20px 30px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(30, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(30, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 20px 50% 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 20px 50% 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(10, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(20, UniCSSUnitType.PX), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(10, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 25% 75%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 25% 75%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(25, UniCSSUnitType.PCT), new UniCSSUnitValue(75, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(25, UniCSSUnitType.PCT), new UniCSSUnitValue(75, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: 30% 60% 15px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 30% 60% 15px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PCT), new UniCSSUnitValue(15, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PCT), new UniCSSUnitValue(15, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: 30%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 30%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(30, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: 50% 50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: 50% 50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: bottom center 10%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: bottom center 10%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "bottom center 10%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: bottom",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: center center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: center center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: left center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: left top 60px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top 60px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PX)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(60, UniCSSUnitType.PX))",
    },
  },
}
`;

exports[`transform-origin: left top right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "left top right",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: right",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: left top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: right bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: right bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(100, UniCSSUnitType.PCT))",
    },
  },
}
`;

exports[`transform-origin: right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(100, UniCSSUnitType.PCT), new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transform-origin: top left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: top left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transform-origin",
        "important": false,
        "prop": "transformOrigin",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "top left",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "Invalid transform-origin value: top",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transform-origin: top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transform-origin: top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "transform-origin": {
      "setterCode": "transformOrigin(UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE)))",
      "valueCode": "UniCSSTransformOrigin(new UniCSSUnitValue(50, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.PCT), new UniCSSUnitValue(0, UniCSSUnitType.NONE))",
    },
  },
}
`;

exports[`transition-delay: 0.5s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 0.5s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 0s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 0s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 200ms: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-delay: 200ms: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 0.3s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 0.3s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 1s: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 1s: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 150ms: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-duration: 150ms: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: all: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: all: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: background-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: background-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-bottom-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-bottom-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-left-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-left-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-right-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-right-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-top-color: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: border-top-color: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: height: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: height: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: margin-top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: opacity: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: opacity: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-bottom: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-bottom: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-left: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-left: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: padding-top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: right: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: right: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: top: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: top: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: transform: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: transform: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: width: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-property: width: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: cubic-bezier: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "cubic-bezier",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`cubic-bezier\` is not supported for \`transition-timing-function\` (supported values are: \`linear\`|\`ease\`|\`ease-in\`|\`ease-out\`|\`ease-in-out\`|\`cubic-bezier(n,n,n,n)\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: cubic-bezier: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "transition-timing-function",
        "important": false,
        "prop": "transitionTimingFunction",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "cubic-bezier",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`cubic-bezier\` is not supported for \`transition-timing-function\` (supported values are: \`linear\`|\`ease\`|\`ease-in\`|\`ease-out\`|\`ease-in-out\`|\`cubic-bezier(n,n,n,n)\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`transition-timing-function: ease: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in-out: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-in-out: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-out: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: ease-out: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: linear: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`transition-timing-function: linear: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`z-index: 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`z-index: 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "z-index": {
      "setterCode": "zIndex(0)",
      "valueCode": "0",
    },
  },
}
`;

exports[`z-index: 1: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`z-index: 1: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "z-index": {
      "setterCode": "zIndex(1)",
      "valueCode": "1",
    },
  },
}
`;

exports[`z-index: 100: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`z-index: 100: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "z-index": {
      "setterCode": "zIndex(100)",
      "valueCode": "100",
    },
  },
}
`;

exports[`z-index: auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "z-index",
        "important": false,
        "prop": "zIndex",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`z-index\` (supported values are: \`integer\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`z-index: auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "z-index",
        "important": false,
        "prop": "zIndex",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`z-index\` (supported values are: \`integer\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;
